<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkBg"
        tools:context=".activities.MainActivity">
    <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp" app:srcCompat="@drawable/chat_icon"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.096"/>
    <TextView
            android:text="@string/welcome_text"
            android:layout_width="340dp"
            android:layout_height="45dp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.051"
            android:textSize="24sp" android:textStyle="bold|italic"/>
    <Button
            android:text="@string/createAcc"
            android:layout_width="264dp"
            android:layout_height="54dp"
            android:id="@+id/createAccButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:textColor="@color/grey_100"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.077" android:background="@drawable/bt_shape"/>
    <Button
            android:text="@string/LoginButton"
            android:layout_width="264dp"
            android:layout_height="54dp"
            android:textColor="@color/grey_100"
            android:id="@+id/loginButton" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/createAccButton" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.105" android:background="@drawable/bt_shape"/>
</androidx.constraintlayout.widget.ConstraintLayout>