<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkBg"
        tools:context=".activities.SetEventActivity">


    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/subjectMeet"
              android:background="@drawable/selector_bg_edit_2"
              android:hint="Subject"
              android:textColorHint="#d3d3d3"
              android:textSize="18sp"
              android:layout_marginLeft="16dp"
              android:paddingBottom="2dp"
              android:textCursorDrawable="@drawable/bg_input_cursor_2"
              android:textColor="#d3d3d3"
              android:padding="10dp"
              android:layout_marginTop="16dp"
              app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginRight="16dp" android:layout_marginEnd="16dp"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/descriptionMeet"
              android:background="@drawable/selector_bg_edit_2"
              android:hint="Description"
              android:textColorHint="#d3d3d3"
              android:textSize="18sp"
              android:paddingBottom="2dp"
              android:textCursorDrawable="@drawable/bg_input_cursor_2"
              android:textColor="#d3d3d3"
              app:layout_constraintTop_toBottomOf="@+id/subjectMeet"
              android:padding="10dp"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginLeft="16dp"
              android:layout_marginStart="16dp"
              android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginRight="16dp" android:layout_marginEnd="16dp"/>

    <Button
            android:text="@string/set_event_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/setTimeButton"
            app:layout_constraintStart_toStartOf="parent"
            android:stateListAnimator="@drawable/state_list_animator_z"
            android:background="@drawable/bt_shape"
            android:textColor="#d3d3d3"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintTop_toBottomOf="@+id/descriptionMeet"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/set_event_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/setDateButton"
            app:layout_constraintStart_toStartOf="parent"
            android:stateListAnimator="@drawable/state_list_animator_z"
            android:background="@drawable/bt_shape"
            android:textColor="#d3d3d3"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/setTimeButton"/>
    <Button
            android:text="@string/set_event_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/setLocationButton"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/bt_shape"
            android:textColor="#d3d3d3"
            android:stateListAnimator="@drawable/state_list_animator_z"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/setDateButton"/>
    <Button
            android:text="@string/SetEventMeeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_shape"
            android:textColor="#d3d3d3"
            android:stateListAnimator="@drawable/state_list_animator_z"
            android:id="@+id/setEventMeetingButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginLeft="16dp" android:layout_marginStart="8dp" android:layout_marginRight="16dp"
            android:layout_marginEnd="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>